--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,22 +1,22 @@
-log4j.rootLogger=TRACE, CONSOLE_LOG, FILE_LOG, FILE_ERROR_LOG
+log4j.rootLogger=TRACE, CONSOLE_LOG
 
 ## Console appender
 log4j.appender.CONSOLE_LOG=org.apache.log4j.ConsoleAppender
-log4j.appender.CONSOLE_LOG.Threshold=WARN
+log4j.appender.CONSOLE_LOG.Threshold=TRACE
 log4j.appender.CONSOLE_LOG.layout=org.apache.log4j.PatternLayout
 log4j.appender.CONSOLE_LOG.layout.ConversionPattern=%d{ISO8601} %5p %c:%M:%L - %m%n
 
 ## File appender
-log4j.appender.FILE_LOG=org.apache.log4j.FileAppender
-log4j.appender.FILE_LOG.Threshold=DEBUG
-log4j.appender.FILE_LOG.file=logs/debug.txt
-log4j.appender.FILE_LOG.layout=org.apache.log4j.PatternLayout
-log4j.appender.FILE_LOG.layout.ConversionPattern=%d{ISO8601} %5p %c:%M:%L - %m%n
+log4j.appender.DEBUG_LOG=org.apache.log4j.FileAppender
+log4j.appender.DEBUG_LOG.Threshold=DEBUG
+log4j.appender.DEBUG_LOG.file=logs/debug.txt
+log4j.appender.DEBUG_LOG.layout=org.apache.log4j.PatternLayout
+log4j.appender.DEBUG_LOG.layout.ConversionPattern=%d{ISO8601} %5p %c:%M:%L - %m%n
 
 
 ## Error appender
-log4j.appender.FILE_ERROR_LOG=org.apache.log4j.FileAppender
-log4j.appender.FILE_ERROR_LOG.Threshold=ERROR
-log4j.appender.FILE_ERROR_LOG.file=logs/error.log
-log4j.appender.FILE_ERROR_LOG.layout=org.apache.log4j.PatternLayout
-log4j.appender.FILE_ERROR_LOG.layout.ConversionPattern=%d{ISO8601} %5p %c:%M:%L - %m%n
+log4j.appender.ERROR_LOG=org.apache.log4j.FileAppender
+log4j.appender.ERROR_LOG.Threshold=ERROR
+log4j.appender.ERROR_LOG.file=logs/error.log
+log4j.appender.ERROR_LOG.layout=org.apache.log4j.PatternLayout
+log4j.appender.ERROR_LOG.layout.ConversionPattern=%d{ISO8601} %5p %c:%M:%L - %m%n
